--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
+.header {
+  width: 100%;
+  max-width: 1200px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  position: relative;
+}
+
+.title,
+.navbar {
+  display: inline-block;
+  width: 300px;
+  background-color: rgb(197, 197, 197);
+  margin: 20px;
+  padding: 10px;
+  border-radius: 3px;
+}
+
+.img {
+  width: 100%;
+  text-align: center;
+  border-radius: 7px;
+  overflow: hidden;
+}
+
+.img img {
+  width: 100%;
+}
+
+.container {
+  width: 100%;
+  max-width: 600px;
+  display: inline-block;
+  margin: 20px;
+  padding: 10px;
+  padding-left: 30px;
+}
+
+.container--small {
+  width: auto;
+  padding: 10px;
+}
+
+.container--medium {
+  width: 400px;
+}
+
+.container--large {
+  width: 600px;
+}
+
+h1,
+h2 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-align: center;
+  text-decoration: none;
+  color: rgb(45, 250, 250);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul li {
+  color: orange;
+  margin: 20px;
+  padding: 10px;
+  padding-left: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
+  width: 100%;
+  max-width: 500px;
+  height: 100%;
+  background-color: aquamarine;
+  text-align: left;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 10px;
+  margin: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+label {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form label input {
+  width: 100%;
+}
+
+input[type="submit"] {
+  margin-top: 10px;
+  padding: 4px;
+  font-size: 1.4em;
+  font-weight: bold;
 }
